# agent

./: CLAUDE.md  Cargo.toml  Dockerfile  deploy.sh  setup-dns.sh  test-mysql.yaml
.github/workflows/: docker-publish.yml  test.yml
docs/: PRD-k8s-auth-proxy.md
helm/mesh-agent/: Chart.yaml  values-production.yaml  values.yaml
helm/mesh-agent/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  secret.yaml  service.yaml  serviceaccount.yaml
k8s/: echo-server.yaml  mesh-agent.yaml  namespace.yaml  postgres.yaml  secrets.yaml
src/: main.rs  signaling.rs  tests.rs
