[package]
name = "mesh-agent"
version = "0.1.0"
edition = "2021"
description = "Mesh VPN Agent - Infrastructure node for mesh network"
authors = ["CloudShield Security"]

[dependencies]
# Async runtime - only features actually used
tokio = { version = "1.40", features = ["rt-multi-thread", "io-util", "net", "sync", "time", "macros"] }

# QUIC transport
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"

# HTTP client for control server
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rand = "0.8"

# Crypto for Ed25519 keys
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# System
dirs = "5.0"
hostname = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
